chore: Update branding with new logo and professional meta tags
- Update index.html with meta tags, OpenGraph, and favicons
- Replace Lucide icons with custom logo.png in Layout and LoginPage
- Remove unused icon imports

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    
+    <!-- Primary Meta Tags -->
+    <title>LeadPilot | AI Cold Email Automation</title>
+    <meta name="title" content="LeadPilot | AI Cold Email Automation" />
+    <meta name="description" content="Automate your cold outreach with personalized AI emails and smart follow-ups. Built for sales teams to scale without losing the human touch." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://leadspilot.app/" />
+    <meta property="og:title" content="LeadPilot | AI Cold Email Automation" />
+    <meta property="og:description" content="Automate your cold outreach with personalized AI emails and smart follow-ups. Built for sales teams to scale without losing the human touch." />
+    <meta property="og:image" content="https://leadspilot.app/og-image.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://leadspilot.app/" />
+    <meta property="twitter:title" content="LeadPilot | AI Cold Email Automation" />
+    <meta property="twitter:description" content="Automate your cold outreach with personalized AI emails and smart follow-ups. Built for sales teams to scale without losing the human touch." />
+    <meta property="twitter:image" content="https://leadspilot.app/og-image.png" />
   </head>
   <body>
     <div id="root"></div>
